--- a/Chess/MainPage.xaml
+++ b/Chess/MainPage.xaml
@@ -145,7 +145,7 @@
             <Image x:Name="img_piece_17" HorizontalAlignment="Left" Height="70" VerticalAlignment="Top" Width="70" Margin="449,525,0,0" PointerEntered="rct_space_PointerEntered" PointerExited="rct_space_PointerExited" PointerReleased="rct_space_PointerReleased"/>
             <Image x:Name="img_piece_18" HorizontalAlignment="Left" Height="70" VerticalAlignment="Top" Width="70" Margin="524,525,0,0" PointerEntered="rct_space_PointerEntered" PointerExited="rct_space_PointerExited" PointerReleased="rct_space_PointerReleased"/>
         </Grid>
-        <ListView x:Name="lv_messageConsole" HorizontalAlignment="Left" Height="451" Margin="822,101,0,0" VerticalAlignment="Top" Width="372" BorderBrush="#FF0F0808" BorderThickness="1">
+        <ListView x:Name="lv_messageConsole" HorizontalAlignment="Left" Height="403" Margin="822,149,0,0" VerticalAlignment="Top" Width="372" BorderBrush="#FF0F0808" BorderThickness="1">
             <ListView.Background>
                 <SolidColorBrush Color="White" Opacity="0.3"/>
             </ListView.Background>
@@ -158,6 +158,7 @@
                 <CompositeTransform Rotation="-90"/>
             </TextBlock.RenderTransform>
         </TextBlock>
+        <TextBlock x:Name="tbl_turnIndicator" HorizontalAlignment="Left" Margin="822,68,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="76" Width="372" FontWeight="Bold" TextAlignment="Center" FontSize="48" Foreground="White"/>
 
     </Grid>
 </Page>
